--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -254,7 +254,7 @@ en:
     school_details: School details
     school_location:
       one: School location
-      many: School locations
+      other: School locations
     school_overview: School overview
     school_size: School size
     schools_overview: Schools overview
